--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 # Core Logic
-requests==2.31.0
-python-dotenv==1.0.1
-redis==5.0.1
+requests==2.32.5
+python-dotenv==1.2.1
+redis==7.1.0
 
 # Database
-SQLAlchemy==2.0.25
-psycopg2-binary==2.9.9
+SQLAlchemy==2.0.45
+psycopg2-binary==2.9.11
 
 # Data Science & ML
 pandas==2.2.0
-numpy==1.26.3
-scikit-learn==1.4.0
-joblib==1.3.2
+numpy==2.3.5
+scikit-learn==1.8.0
+joblib==1.5.2
 xgboost==3.1.2
 
 rapidfuzz==3.14.3
+beautifulsoup4==4.14.3
