--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Run daily update
         env:
           FOOTBALL_DATA_API_KEY: ${{ secrets.FOOTBALL_DATA_API_KEY }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          REDIS_URL: ${{ secrets.REDIS_URL }}
         run: python -m app.web.daily_update
 
       - name: Commit site data
